[package]
name = "eva-rt-common"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0"
description = "Structs, traits and functions used to develop real-time analysis tools."
homepage = "https://github.com/Yurand2000/eva-rt-common"
repository = "https://github.com/Yurand2000/eva-rt-common"
readme = "README.md"

[dependencies]
num = "0.4.3"
ordered-float = "5.1.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
